# rust_mpc

./: .env  Cargo.toml  README.md  docker-compose.yml  mongo-init.js
src/: main.rs
src/database/: SecretRepository.rs  UserRepository.rs  mod.rs
src/models/: PartialSecret.rs  User.rs  mod.rs
src/services/: SecretService.rs  WalletService.rs  mod.rs
src/util/: mod.rs  polynomials.rs  shamir.rs
src/views/: Default.rs  SaveSecret.rs  User.rs  mod.rs
