[package]
name = "node-rpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4"
dotenv = "=0.15.0"
env_logger = "=0.10.0"
serde = "=1.0.160"
futures = "=0.3.28"
lazy_static = "=1.4.0"
wallet-gen = "=0.4.1"
flyway = "=0.2.2"
rand = "0.8.5"
polynom = "0.1.1"
bigdecimal = "0.3.0"
primitive-types = "0.12.1"

[dependencies.mongodb]
version = "=2.5.0"
default-features = false
features = ["async-std-runtime"]